test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: grafana.arcadiaprofit.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
    - hosts:
      - grafana.arcadiaprofit.shop
      secretName: grfana.arcadiaprofit.shop-tls
status:
  loadBalancer:
    ingress:
      - hostname: >-	
          k8s-ingress-ingress-70d02f223c-4d2a3b04886140f1b961a25856211401.ke.kr-central-2.kakaocloud.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: argocd.arcadiaprofit.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
  tls:
    - hosts:
      - argocd.arcadiaprofit.shop
      secretName: argocd.arcadiaprofit.shop-tls
status:
  loadBalancer:
    ingress:
      - hostname: >-	
          k8s-ingress-ingress-70d02f223c-4d2a3b04886140f1b961a25856211401.ke.kr-central-2.kakaocloud.com
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # cert-manager.io/cluster-issuer: "letsencrypt-staging"
    # nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: kibana.arcadiaprofit.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kibana-kibana
            port:
              number: 5601
  tls:
    - hosts:
      - kibana.arcadiaprofit.shop
      secretName: kibana.arcadiaprofit.shop-tls
status:
  loadBalancer:
    ingress:
      - hostname: >-	
          k8s-ingress-ingress-70d02f223c-4d2a3b04886140f1b961a25856211401.ke.kr-central-2.kakaocloud.com
